# libru

./: .gitattributes  .gitignore  Pipfile  README.md  pyproject.toml  setup.py
libru/: __init__.py  cli.py  libru.py
tests/: ru.html  test_ru.py
