[tool.poetry]
name = "libru"
version = "0.1.3"
description = ""
authors = ["Caio Pereira Oliveira <caiopoliveira@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
lxml = "^4.4"
pytz = "^2019.2"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
pytest = "^7.2.0"

[tool.poetry.scripts]
ru = 'libru.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
